--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,82 @@
-body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+
+html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, font, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, caption {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    outline: 0;
+    font-size: 100%;
+    vertical-align: baseline;
+    background: transparent;
+}
+/* Removes white space at top of page */
+
+@font-face {
+    font-family: 'KommonGrotesk-Normal';
+    src: url(../../static/KommonGrotesk-Normal.ttf);
 }
 
-a {
-  color: #00B7FF;
+/* .image-block { 
+    display: flex;
+    flex-direction: row;
+} */
+
+.block1 {
+    background: #E3425F;
+    font-family: 'KommonGrotesk-Normal';
+    background: -moz-linear-gradient(top, #E3425F 0%, #2A1566 100%);
+    background: -webkit-linear-gradient(top, #E3425F 0%, #2A1566 100%);
+    background: linear-gradient(to bottom, #E3425F 0%, #2A1566 100%);
+    color: white;
+    padding-bottom: 50px;
 }
+
+.block1style{
+    text-align: center;
+    color: white;
+}
+
+#title { 
+    font-size: 40px;
+    padding-bottom: 10px;
+    
+}
+
+#subtitle { 
+    font-size: 10px;
+}
+
+#block2{
+    color: green;
+}
+
+#signup {
+    border: 0.5px solid white;
+    margin-right: -10px;
+}
+
+#login, #signup{
+    float: right;
+    background: transparent;
+    padding: 5px;
+    margin: 5px;
+    /* margin: 15px; */
+    margin-top: 20px;
+    /* margin-right: 30px; */
+    color: white;
+    font-size: 10px;
+    cursor: pointer;
+}
+
+#signup:hover {
+    color: gray;
+    border: 0.5px solid gray;
+}
+
+#login:hover {
+    color: gray;
+}
+
+.signInBlock{
+    margin-right: 30px;
+}
+
