--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -27,22 +27,25 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
     background: -webkit-linear-gradient(top, #E3425F 0%, #2A1566 100%);
     background: linear-gradient(to bottom, #E3425F 0%, #2A1566 100%);
     color: white;
-    padding-bottom: 50px;
+    padding-bottom: 10px;
 }
 
 .block1style{
     text-align: center;
+ 
     color: white;
 }
 
 #title { 
     font-size: 40px;
+    line-height: 40px;
     padding-bottom: 10px;
     
 }
 
 #subtitle { 
     font-size: 10px;
+    margin-bottom: 18px;
 }
 
 #block2{
@@ -76,7 +79,42 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
     color: gray;
 }
 
+#login {
+    margin-top: 22px;
+}
+
 .signInBlock{
     margin-right: 30px;
 }
 
+#getStartedBtn {
+    padding: 5px 60px;
+    font-size: 12px;
+    color: rgba(112,115,122,255);
+    text-decoration: bold;
+    margin-bottom: 75px;
+}
+
+#playButton {
+    margin-right: 10px;
+}
+
+#getAppText {
+    font-size: 12px;
+    margin-top: 10px;
+    margin-bottom: 0px;
+}
+
+#app {
+    color: white;
+    margin-right: 5px;
+
+}
+
+#app:hover {
+    color: gray;
+}
+
+.getAppBlock {
+    margin-bottom: 0;
+}
