--- a/views/index.jade
+++ b/views/index.jade
@@ -1,17 +1,20 @@
 doctype html
 html(lang='en')
   head
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     style
       include ../public/stylesheets/style.css    
   
   body
+
     .block1
       .image-block
       .signInBlock
         button#signup(type='button') Sign Up
         h1#login Login
       img.logo(src="https://i.imgur.com/BjbhHis.png" alt="logo image")
-
       .block1style
         h1#title
           | Your Live & 
@@ -19,9 +22,19 @@ html(lang='en')
           | On-Demand
           br
           | Events Platform
+
         p#subtitle
           | JUNO is an online events platform built to engage
           br
           | with your audience 365 days a year.
+
+        //- Get Started Button:
+        button(type="button" id="getStartedBtn" class="btn btn-light")<i id="playButton" class="bi bi-play "></i>Get Started</button>
+
+        .getAppBlock
+          <h2 id="getAppText"> <a href="https://play.google.com/store?&utm_source=na_Med&utm_medium=hasem&utm_content=Nov0520&utm_campaign=Evergreen&pcampaignid=MKT-EDR-na-us-1000189-Med-hasem-py-Evergreen-Nov0520-Text_Search_BKWS-id_100752_%7cEXA%7cONSEM_kwid_43700045371544949&gclid=Cj0KCQiA3fiPBhCCARIsAFQ8QzU7q_JuyCNsEjx6ZIXO_op3-HVytRsxxOlRa74Llz0ekKhfvtO3zvwaAo2vEALw_wcB&gclsrc=aw.ds"><i class="fa fa-android" id="app" style="font-size:15px"></a></i> <a href="https://www.apple.com/app-store/"><i class="fa fa-apple" id="app" style="font-size:15px"></i></a> Get the app today </h2>
+
     #block2
       p just testingggggggg
+      
+
