--- a/views/index.jade
+++ b/views/index.jade
@@ -35,6 +35,14 @@ html(lang='en')
           <h2 id="getAppText"> <a href="https://play.google.com/store?&utm_source=na_Med&utm_medium=hasem&utm_content=Nov0520&utm_campaign=Evergreen&pcampaignid=MKT-EDR-na-us-1000189-Med-hasem-py-Evergreen-Nov0520-Text_Search_BKWS-id_100752_%7cEXA%7cONSEM_kwid_43700045371544949&gclid=Cj0KCQiA3fiPBhCCARIsAFQ8QzU7q_JuyCNsEjx6ZIXO_op3-HVytRsxxOlRa74Llz0ekKhfvtO3zvwaAo2vEALw_wcB&gclsrc=aw.ds"><i class="fa fa-android" id="app" style="font-size:15px"></a></i> <a href="https://www.apple.com/app-store/"><i class="fa fa-apple" id="app" style="font-size:15px"></i></a> Get the app today </h2>
 
     #block2
-      p just testingggggggg
-      
+      #block2Text
+        p#block2title
+          | Connect your people.
+          br
+          | No matter the medium.
+        
+        p#block2sub
+          | Juno equips you to step in without the barriers of
+          br
+          | location
 
