--- a/views/index.jade
+++ b/views/index.jade
@@ -45,4 +45,5 @@ html(lang='en')
           | Juno equips you to step in without the barriers of
           br
           | location
+          img.block2#devices(src="https://i.imgur.com/1kMQQEf.png")
 
