fix app after breaking for no reason

--- a/views/index.jade
+++ b/views/index.jade
@@ -14,7 +14,7 @@ html(lang='en')
       .signInBlock
         button#signup(type='button') Sign Up
         h1#login Login
-      img.logo(src="https://i.imgur.com/BjbhHis.png" alt="logo image")
+      img.logo(src="https://i.imgur.com/ZJFcBv2.png" alt="logo image")
       .block1style
         h1#title
           | Your Live & 
