--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -141,4 +141,42 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
     height: auto;
     float: right;
     padding-right: 40px;
+    padding-bottom: 80px;
 }
+
+.container {  display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr [F] 1fr;
+    gap: 0px 0px;
+    grid-auto-flow: row;
+    grid-template-areas:
+      "One oneTitle oneDescrip"
+      "Two twoTitle twoDescrip"
+      "Three threeTitle threeDescrip"
+      "Four fourTitle fourDescrip";
+  }
+  
+  .One { grid-area: One; }
+  
+  .Two { grid-area: Two; }
+  
+  .Three { grid-area: Three; }
+  
+  .Four { grid-area: Four; }
+  
+  .oneTitle { grid-area: oneTitle; }
+  
+  .twoTitle { grid-area: twoTitle; }
+  
+  .threeTitle { grid-area: threeTitle; }
+  
+  .fourTitle { grid-area: fourTitle; }
+  
+  .oneDescrip { grid-area: oneDescrip; }
+  
+  .twoDescrip { grid-area: twoDescrip; }
+  
+  .threeDescrip { grid-area: threeDescrip; }
+  
+  .fourDescrip { grid-area: fourDescrip; }
+  
