--- a/views/index.jade
+++ b/views/index.jade
@@ -46,4 +46,24 @@ html(lang='en')
           br
           | location
           img.block2#devices(src="https://i.imgur.com/1kMQQEf.png")
+    
+    #block3
+    
+      h3#block3Title Our platform is designed around 4 human motivators
+      h3#block3Subtitle Here's how it works
+
+      <div class="container">
+      <div class="One">1</div>
+      <div class="Two">2</div>
+      <div class="Three">3</div>
+      <div class="Four">4</div>
+      <div class="oneTitle">Title1</div>
+      <div class="twoTitle">Title2</div>
+      <div class="threeTitle">Title3</div>
+      <div class="fourTitle">Title4</div>
+      <div class="oneDescrip">Descript</div>
+      <div class="twoDescrip">Descript</div>
+      <div class="threeDescrip">whehwehahha</div>
+      <div class="fourDescrip">Descriptjwsenwejwje</div>
+      </div>
 
