--- a/views/index.jade
+++ b/views/index.jade
@@ -48,10 +48,9 @@ html(lang='en')
           img.block2#devices(src="https://i.imgur.com/1kMQQEf.png")
     
     #block3
-    
-      h3#block3Title Our platform is designed around 4 human motivators
-      h3#block3Subtitle Here's how it works
-
+      #block3Titles
+        h3#block3Title Our platform is designed around 4 human motivators
+        h3#block3Subtitle Here's how it works
       <div class="container">
       <div class="One">1</div>
       <div class="Two">2</div>
@@ -65,5 +64,6 @@ html(lang='en')
       <div class="twoDescrip">Descript</div>
       <div class="threeDescrip">whehwehahha</div>
       <div class="fourDescrip">Descriptjwsenwejwje</div>
+      <div class="Picture"><img id="block3img" src="https://i.imgur.com/PEbCBjt.png")></div>
       </div>
 
