--- a/views/index.jade
+++ b/views/index.jade
@@ -6,7 +6,8 @@ html(lang='en')
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     style
       include ../public/stylesheets/style.css    
-  
+    //- script.
+    //-   const hello =  "testing testing 123456797";
   body
 
     .block1
@@ -51,19 +52,23 @@ html(lang='en')
       #block3Titles
         h3#block3Title Our platform is designed around 4 human motivators
         h3#block3Subtitle Here's how it works
+      
+      //- Grid 
       <div class="container">
       <div class="One">1</div>
       <div class="Two">2</div>
       <div class="Three">3</div>
       <div class="Four">4</div>
-      <div class="oneTitle">Title1</div>
-      <div class="twoTitle">Title2</div>
-      <div class="threeTitle">Title3</div>
-      <div class="fourTitle">Title4</div>
-      <div class="oneDescrip">Descript</div>
+      <div class="oneTitle">Connect your Crowds</div>
+      <div class="twoTitle">Gamify the Experience</div>
+      <div class="threeTitle">Engage with Business Growth</div>
+      <div class="fourTitle">Continuous Interaction</div>
+
+      <div class="oneDescrip">Onboard users around interests,strengths and desired improvement areas and allow machine learning triggers to recommend peer connections, mainstage, and breakout learning opportunities. </div>
       <div class="twoDescrip">Descript</div>
       <div class="threeDescrip">whehwehahha</div>
-      <div class="fourDescrip">Descriptjwsenwejwje</div>
+      <div class="fourDescrip">#{hello}</div>
+
       <div class="Picture"><img id="block3img" src="https://i.imgur.com/PEbCBjt.png")></div>
       </div>
-
+      button#scheduleDemoBtn(type='button' class='btn btn-secondary') SCHEDULE A DEMO TODAY
