finish block 3 minus row lines, start block4

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -134,9 +134,14 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
     padding-right: 40px;
     padding-bottom: 80px;
 }
+
+#block3 {
+    background-color: #f8f8f8;
+}
 #block3Titles { 
     padding-left: 60px;
     padding-bottom: 80px;
+    padding-top: 40px;
 }
 
 #block3Title {
@@ -212,6 +217,17 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
   }
   
   #scheduleDemoBtn {
-      align-items: center;
-      justify-content: center;
+      margin:0 auto;
+      margin-top: 30px;
+      margin-bottom: 50px;
+      display:block;
+
   }
+
+  .btn-secondary, .btn-secondary:hover, .btn-secondary:active, .btn-secondary:visited {
+    background-color: #c7159c !important;
+}
+
+#block4Titles {
+    text-align: center;
+}
