--- a/views/index.jade
+++ b/views/index.jade
@@ -65,10 +65,15 @@ html(lang='en')
       <div class="fourTitle">Continuous Interaction</div>
 
       <div class="oneDescrip">Onboard users around interests,strengths and desired improvement areas and allow machine learning triggers to recommend peer connections, mainstage, and breakout learning opportunities. </div>
-      <div class="twoDescrip">Descript</div>
-      <div class="threeDescrip">whehwehahha</div>
-      <div class="fourDescrip">#{hello}</div>
+      <div class="twoDescrip">Deliver powerful gamification tools supporting real-time and ongoing user competition. Weighted algorithms are also designed to increase check-ins and deeper discovery through rewards and recognition.</div>
+      <div class="threeDescrip">Support users and partners by facilitating business connections through live exhibit experiences, digital think-tank sessions, suggested collaboration partnerships, and skill-based visibility tools. </div>
+      <div class="fourDescrip">Create EQ and IQ learning pathways to engage users on all levels. From certification and badging to goal setting and performance commitments offer a diverse set of actions for users to personally develop.</div>
 
       <div class="Picture"><img id="block3img" src="https://i.imgur.com/PEbCBjt.png")></div>
       </div>
       button#scheduleDemoBtn(type='button' class='btn btn-secondary') SCHEDULE A DEMO TODAY
+    
+    #block4
+      #block4Titles
+        h3#block4Title Our Partners
+        h4#block4Subtitle Trusted by world-leading organizations
