--- a/views/index.jade
+++ b/views/index.jade
@@ -77,3 +77,4 @@ html(lang='en')
       #block4Titles
         h3#block4Title Our Partners
         h4#block4Subtitle Trusted by world-leading organizations
+      img#partnerImg(src='https://i.imgur.com/y9X9SML.png')
