--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -13,7 +13,6 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 
 .block1 {
     background: #E3425F;
-    
     background: -moz-linear-gradient(top, #E3425F 0%, #2A1566 100%);
     background: -webkit-linear-gradient(top, #E3425F 0%, #2A1566 100%);
     background: linear-gradient(to bottom, #E3425F 0%, #2A1566 100%);
@@ -49,9 +48,7 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
     background: transparent;
     padding: 5px;
     margin: 5px;
-    /* margin: 15px; */
     margin-top: 20px;
-    /* margin-right: 30px; */
     color: white;
     font-size: 10px;
     cursor: pointer;
@@ -95,7 +92,6 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 #app {
     color: white;
     margin-right: 5px;
-
 }
 
 #app:hover {
@@ -128,7 +124,6 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 
 #devices {
     max-width: 100%;
-    /* float: right; */
     height: auto;
     float: right;
     padding-right: 40px;
@@ -139,6 +134,7 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
     background-color: white;
     padding-bottom: 30px;
 }
+
 #block3Titles { 
     padding-left: 60px;
     padding-bottom: 80px;
@@ -168,29 +164,17 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
   }
   
   .One { grid-area: One; }
-  
   .Two { grid-area: Two;  }
-  
   .Three { grid-area: Three; }
-  
   .Four { grid-area: Four; }
-  
   .oneTitle { grid-area: oneTitle;  }
-  
   .twoTitle { grid-area: twoTitle; }
-  
   .threeTitle { grid-area: threeTitle; }
-  
   .fourTitle { grid-area: fourTitle; }
-  
   .oneDescrip { grid-area: oneDescrip; }
-  
   .twoDescrip { grid-area: twoDescrip; }
-  
   .threeDescrip { grid-area: threeDescrip; }
-  
   .fourDescrip { grid-area: fourDescrip; }
-  
   .Picture { grid-area: Picture; }
   
   .One,.Two,.Three,.Four {
@@ -198,7 +182,6 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
       padding-left: 50px;
       font-weight: bolder;
       color: lightgray;
-
   }
 
   .oneTitle, .twoTitle, .threeTitle, .fourTitle, .oneDescrip, .twoDescrip, .threeDescrip, .fourDescrip {
@@ -212,9 +195,6 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
   .oneTitle, .twoTitle, .threeTitle, .fourTitle {
     font-weight: bold;
     font-size: 25px;
-  }
-
-  .oneDescrip, .twoDescrip, .threeDescrip, .fourDescrip {
   }
   
   #scheduleDemoBtn {
@@ -231,26 +211,27 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 
 #block4{
     background-color: #f7f7f7;
-    /* margin-top: 40px;
-    margin-bottom: 40px; */
+    margin-bottom: 100px;
 }
 
 #block4Titles {
     text-align: center;
-    padding-top: 40px;
-    padding-bottom: 40px;
-   
+    padding-top: 100px;
+    padding-bottom: 140px;
 }
 
 #block4Title {
-    font-size: 45px;
-   
+    padding-bottom: 10px;
+    font-size: 60px; 
+}
+
+#block4Subtitle {
+    font-size: 20px;
 }
 
 #partnerImg {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 90%;
-
+    max-width: 90%;
 }
