--- a/views/index.jade
+++ b/views/index.jade
@@ -71,10 +71,33 @@ html(lang='en')
 
       <div class="Picture"><img id="block3img" src="https://i.imgur.com/PEbCBjt.png")></div>
       </div>
-      button#scheduleDemoBtn(type='button' class='btn btn-secondary') SCHEDULE A DEMO TODAY
+      button.scheduleDemoBtn#scheduleBtn1(type='button' class='btn btn-secondary') SCHEDULE A DEMO TODAY
     
     #block4
       #block4Titles
         h3#block4Title Our Partners
         h4#block4Subtitle Trusted by world-leading organizations
       img#partnerImg(src='https://i.imgur.com/y9X9SML.png')
+
+    #block5
+      .bg-image
+        .videoPlayer
+                <div class="embed-responsive embed-responsive-4by3">
+                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/x_R-qzjZrKQ" allowfullscreen></iframe>
+                </div>
+          #block5Titles
+            h3#block5Title Show Me Juno
+            h3#block5Subtitle 
+              | Are you ready to bring energy, creativity
+              br 
+              | and connectivity to your organization?
+              br 
+              | JUNO will launch your vision and
+              br
+              | mission into a virtual experience, second
+              br
+              | to none. 
+            button.scheduleDemoBtn#scheduleBtn2(type='button' class='btn btn-secondary') SCHEDULE A DEMO TODAY
+
+        
+            
