--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -21,8 +21,8 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 }
 
 .block1style{
+    padding-top: 40px;
     text-align: center;
- 
     color: white;
 }
 
@@ -76,7 +76,7 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
     font-size: 12px;
     color: rgba(112,115,122,255);
     text-decoration: bold;
-    margin-bottom: 75px;
+    margin-bottom: 130px;
 }
 
 #playButton {
